--- a/dsan-website/styles.css
+++ b/dsan-website/styles.css
@@ -1,17 +1,18 @@
 
 body {
-    font-family:verdana;
-    background-image: ;
+    font-family:'Roboto', sans-serif;
+    background-image: url('/Users/sheebamoghal/Desktop/DSAN5000/dsan-5000-project-msheeba4848/dsan-website/5000-website/images/background.jpg');
     background-color: ;
 
 }
 
 ul {
+    font-family:'garabond', sans-serif;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #004d99;
+    background-color: black;
     max-width:1357px;
 }
 
@@ -20,6 +21,7 @@ li {
 }
 
 li a, .dropbtn {
+    font-family:'Roboto', sans-serif;
     display: inline-block;
     color: white;
     text-align: center;
@@ -28,7 +30,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: grey;
+    background-color: black;
 }
 
 li.dropdown {
@@ -36,6 +38,7 @@ li.dropdown {
 }
 
 .dropdown-content {
+    font-family:'Roboto', sans-serif;
     display: none;
     position: absolute;
     background-color: white;
@@ -43,6 +46,7 @@ li.dropdown {
 }
 
 .dropdown-content a {
+    font-family:'Roboto', sans-serif;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -52,6 +56,7 @@ li.dropdown {
 }
 
 .dropdown:hover .dropdown-content {
+    font-family:'Roboto', sans-serif;
     display: block;
     opacity: .8;
 }
@@ -65,7 +70,7 @@ td {
 tr{
     padding: 0px;
     text-align: top;
-    background-color:#ffffff
+    background-color:
 }
 
 img:hover {
