the files have been added

--- a/dsan-website/styles.css
+++ b/dsan-website/styles.css
@@ -75,8 +75,8 @@ img:hover {
   opacity: .6;
 }
 
-ol{
+/* ol{
     display:block;
     position: static;
-    margin-bottom: 150px;
-}
+    margin-bottom: 350px;
+} */
